--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 node_modules/
+
+# Editors
+.vscode/
+.idea/
+
+# Windows
+Thumbs.db
+
+# Env
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+token.txt
+config.py
