--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "eslint": "^9.13.0"
+    "@types/node": "^22.7.7",
+    "eslint": "^9.13.0",
+    "typescript": "^5.6.3"
   }
 }
