--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "test": "test",
     "start": "node -r dotenv/config ./build/app.js",
-    "deploy": "node -r dotenv/config ./build/commands/deploy-commands.js",
+    "deploy": "node -r dotenv/config ./build/deploy.js",
     "cmd:d": "node -r dotenv/config ./build/deleteCommand.js"
   },
   "repository": {
