--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "tsc",
     "test": "test",
     "start": "tsc && node -r dotenv/config ./build/app.js",
-    "deploy": "node -r dotenv/config ./build/deploy.js",
-    "cmd:d": "node -r dotenv/config ./build/deleteCommand.js"
+    "deploy": "tsc && node -r dotenv/config ./build/deploy.js",
+    "cmd:d": "tsc && node -r dotenv/config ./build/deleteCommand.js"
   },
   "repository": {
     "type": "git",
