Remove casing error on deployall script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test",
     "start": "tsc && node -r dotenv/config ./build/app.js",
     "deployg": "tsc && node -r dotenv/config ./build/deploy.js",
-    "deployall": "tsc && node -r dotenv/config ./build/deployall.js",
+    "deployall": "tsc && node -r dotenv/config ./build/deployAll.js",
     "cmd:d": "tsc && node -r dotenv/config ./build/deleteCommand.js"
   },
   "repository": {
